data/derived/comb/progs/unify/prog7986.ml.out
Characters 88-96:
  if x = 1 then buildX()
                ^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         unit
